--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "pomato",
   "version": "0.0.0",
   "scripts": {
+    "tailwind": "./node_modules/.bin/tailwind build ./src/tailwind-build.scss -c ./tailwind.config.js -o ./src/styles.scss",
+    "prestart": "npm run tailwind",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
@@ -28,9 +30,9 @@
     "@angular/cli": "~8.2.2",
     "@angular/compiler-cli": "~8.2.0",
     "@angular/language-service": "~8.2.0",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -40,6 +42,7 @@
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
     "protractor": "~5.4.0",
+    "tailwindcss": "^1.1.2",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "typescript": "~3.5.3"
